# devilutionx-font-converter

./: .editorconfig  .gitignore  README.md  pyproject.toml
src/devilutionx_font_converter/: bevel.py  convert.py
src/devilutionx_font_converter/data/: palette.pal
